[package]
name = "async-web-client"
version = "0.5.0"
edition = "2021"
description = "async web client helpers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/async-web-client"

[dependencies]
http = "1.0.0"
futures = "0.3.28"
log = "0.4.17"
thiserror = "1.0"
lazy_static = "1.4.0"
rustls-pki-types = { version = "1.0.0", features = ["std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version="0.3.4", features=['ReadableStream', 'ReadableStreamDefaultReader'] }
gloo-net = { version = "0.2.6", features = ["http"], default-features = false }
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-http-codec = "0.8.0"
async-net = "2.0.0"
futures-rustls = "0.25.0"
async-ws = { version = "0.4.0", optional = true }
webpki-roots = "0.26.0"
rustls = "0.22"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "1", features = ["color"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
smol = "2.0.0"
env_logger = "0.10"

[features]
websocket = ["async-ws"]

[[example]]
name = "websocket"
required-features = ["websocket"]
