[package]
name = "async-web-client"
version = "0.5.2"
edition = "2021"
description = "async web client helpers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/async-web-client"

[dependencies]
http = "1.1"
futures = "0.3"
log = "0.4"
thiserror = "1.0"
lazy_static = "1.4"
rustls-pki-types = { version = "1.4", features = ["std"] }
async-http-codec = "0.8.0"
async-net = "2.0.0"
futures-rustls = { version = "0.26", default-features = false }
async-ws = { version = "0.4", optional = true }
webpki-roots = "0.26"

[dev-dependencies]
smol = "2.0.0"

[features]
default = ["ring"]
ring = ["futures-rustls/ring"]
aws-lc-rs = ["futures-rustls/aws-lc-rs"]
websocket = ["async-ws"]

[[example]]
name = "post"
required-features = ["default"]

[[example]]
name = "websocket"
required-features = ["websocket"]
