[package]
name = "async-web-client"
version = "0.6.2"
edition = "2021"
description = "async web client helpers"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/FlorianUekermann/async-web-client"

[dependencies]
http = "1.0.0"
futures = "0.3.28"
log = "0.4.17"
thiserror = "1.0"
lazy_static = "1.4.0"
rustls-pki-types = { version = "1.0.0", features = ["std"] }
async-http-codec = "0.8.0"
async-net = "2.0.0"
futures-rustls = { version = "0.26", default-features = false }
async-ws = { version = "0.4.0", optional = true }
webpki-roots = "0.26.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0", optional = true}

[dev-dependencies]
smol = "2.0.0"
env_logger = "0.11.3"

[features]
default = ["aws-lc-rs", "tls12","json"]
tls12 = ["futures-rustls/tls12"]
ring = ["futures-rustls/ring"]
aws-lc-rs = ["futures-rustls/aws-lc-rs"]
websocket = ["async-ws"]
json = ["serde_json"]

[[example]]
name = "post"
required-features = ["json", "aws-lc-rs"]

[[example]]
name = "websocket"
required-features = ["default", "websocket"]
